--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -734,7 +734,7 @@ jobs:
     runs-on: ubuntu-latest
     env:
       DOCKER_BUILDKIT: 1
-      BENCHBASE_PROFILES: 'cockroachdb mariadb mysql oracle phoenix postgres spanner sqlite sqlserver'
+      BENCHBASE_PROFILES: 'auroradsql cockroachdb mariadb mysql oracle phoenix postgres spanner sqlite sqlserver'
       CONTAINER_REGISTRY_NAME: ${{ secrets.ACR_LOGINURL }}
     services:
       postgres: # https://hub.docker.com/_/postgres
