add google.errorprone as dependency to fix packaging error

--- a/pom.xml
+++ b/pom.xml
@@ -414,6 +414,11 @@
             <artifactId>jsr305</artifactId>
             <version>3.0.2</version>
         </dependency>
+        <dependency>
+            <groupId>com.google.errorprone</groupId>
+            <artifactId>error_prone_annotations</artifactId>
+            <version>2.26.1</version>
+        </dependency>
     </dependencies>
 
     <build>
@@ -592,6 +597,7 @@
                                 <ignoredUnusedDeclaredDependency>org.xerial:sqlite-jdbc:jar</ignoredUnusedDeclaredDependency>
                                 <ignoredUnusedDeclaredDependency>software.amazon.awssdk:http-auth-aws:jar</ignoredUnusedDeclaredDependency>
                                 <ignoredUnusedDeclaredDependency>com.google.code.findbugs:jsr305:jar</ignoredUnusedDeclaredDependency>
+                                <ignoredUnusedDeclaredDependency>com.google.errorprone:error_prone_annotations:jar</ignoredUnusedDeclaredDependency>
                             </ignoredUnusedDeclaredDependencies>
                             <ignoredNonTestScopedDependencies>
                                 <ignoredNonTestScopedDependency>org.mockito:mockito-core:jar</ignoredNonTestScopedDependency>
