--- a/.github/workflows/dsqlmaven.yml
+++ b/.github/workflows/dsqlmaven.yml
@@ -114,6 +114,12 @@ jobs:
           java-version: ${{env.JAVA_VERSION}}
           distribution: 'temurin'
 
+      - name: Setup reverse proxy
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y socat
+          nohup socat TCP-LISTEN:5432,fork TCP:${{ secrets.CLUSTER_ENDPOINT }}:5432 &
+
       - name: Run benchmark
         run: |
           java -jar benchbase.jar -b ${{matrix.benchmark}} -c config/postgres/sample_${{matrix.benchmark}}_config.xml -im 1000 -mt advanced --create=true --load=true --execute=true --json-histograms results/histograms.json
