--- a/.github/workflows/dsqlmaven.yml
+++ b/.github/workflows/dsqlmaven.yml
@@ -90,6 +90,8 @@ jobs:
   auroradsql:
     needs: package-and-upload
     runs-on: ubuntu-latest
+    permissions:
+      id-token: write # This is required for requesting the JWT
     strategy:
       fail-fast: false
       matrix:
