--- a/.github/workflows/dsqlmaven.yml
+++ b/.github/workflows/dsqlmaven.yml
@@ -117,12 +117,6 @@ jobs:
           java-version: ${{env.JAVA_VERSION}}
           distribution: 'temurin'
 
-      - name: Setup reverse proxy
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y socat
-          nohup socat TCP-LISTEN:5432,fork TCP:${{ secrets.CLUSTER_ENDPOINT }}:5432 &
-
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
@@ -131,6 +125,10 @@ jobs:
 
       - name: Run benchmark
         run: |
+
+          # Replace localhost with actual host
+          sed -i 's/localhost:5432/${{ secrets.CLUSTER_ENDPOINT }}:5432/' config/postgres/sample_${{matrix.benchmark}}_config.xml
+
           java -jar benchbase.jar -b ${{matrix.benchmark}} -c config/postgres/sample_${{matrix.benchmark}}_config.xml -im 1000 -mt advanced --create=true --load=true --execute=true --json-histograms results/histograms.json
 
           # FIXME: Reduce the error rate so we don't need these overrides.
