--- a/.github/workflows/dsqlmaven.yml
+++ b/.github/workflows/dsqlmaven.yml
@@ -125,11 +125,10 @@ jobs:
 
       - name: Run benchmark
         run: |
-
           # Replace localhost with actual host
-          sed -i 's/localhost:5432/${{ secrets.CLUSTER_ENDPOINT }}:5432/' config/postgres/sample_${{matrix.benchmark}}_config.xml
+          sed 's/localhost:5432/${{ secrets.CLUSTER_ENDPOINT }}:5432/g' config/auroradsql/sample_${{matrix.benchmark}}_config.xml > sample.xml
 
-          java -jar benchbase.jar -b ${{matrix.benchmark}} -c config/postgres/sample_${{matrix.benchmark}}_config.xml -im 1000 -mt advanced --create=true --load=true --execute=true --json-histograms results/histograms.json
+          java -jar benchbase.jar -b ${{matrix.benchmark}} -c sample.xml -im 1000 -mt advanced --create=true --load=true --execute=true --json-histograms results/histograms.json
 
           # FIXME: Reduce the error rate so we don't need these overrides.
           results_benchmark=${{matrix.benchmark}}
