--- a/.github/workflows/dsqlmaven.yml
+++ b/.github/workflows/dsqlmaven.yml
@@ -21,10 +21,6 @@ env:
   JAVA_VERSION: 21
   ERRORS_THRESHOLD: 0.01
 
-concurrency:
-  group: ${{ github.workflow }}-${{ github.ref }}-${{ github.event_name }}
-  cancel-in-progress: true
-
 jobs:
   compile:
     runs-on: ubuntu-latest
@@ -86,6 +82,9 @@ jobs:
   auroradsql:
     needs: package-and-upload
     runs-on: ubuntu-latest
+    concurrency:
+      group: ${{ github.workflow }}-${{ github.ref }}
+      cancel-in-progress: false
     permissions:
       id-token: write # This is required for requesting the JWT
       contents: read
