--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -2,11 +2,11 @@ name: BenchBase (Python)
 
 on:
   push:
-    branches: [ to-be-upstreamed, dsql-specific ]
+    branches: [ to-be-upstreamed, dsql ]
     tags:
       - 'v*'
   pull_request:
-    branches: [ to-be-upstreamed, dsql-specific ]
+    branches: [ to-be-upstreamed, dsql ]
 
 jobs:
   build:
